# sealisp

./: CMakeLists.txt  Makefile  README.md  layers.txt
docs/: design.md  style.md  todo.md  usage.md
scripts/: linecount.sh
src/: builtins.c  builtins.h  env.c  env.h  eval.c  eval.h  main.c  printer.c  printer.h  reader.c  reader.h  trie.c  trie.h  value.c  value.h
